fuplParser.java
// Generated from fupl.g4 by ANTLR 4.8
 import java.util.*; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class fuplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, ID=15, ASDUPLA=16, OP_SOMAC=17, 
		OP_ARITMETICO2=18, NUM=19, OPREL=20, PV=21, AC=22, FC=23, AP=24, FP=25, 
		Op_atrib=26, WS=27;
	public static final int
		RULE_inicio = 0, RULE_declvar = 1, RULE_tipo = 2, RULE_cmd = 3, RULE_cond = 4, 
		RULE_enquanto = 5, RULE_fazer = 6, RULE_comp = 7, RULE_saida = 8, RULE_entrada = 9, 
		RULE_atrib = 10, RULE_expressao = 11, RULE_op_aritmetico = 12, RULE_texto = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "declvar", "tipo", "cmd", "cond", "enquanto", "fazer", "comp", 
			"saida", "entrada", "atrib", "expressao", "op_aritmetico", "texto"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'inicio'", "'fim'", "'feumb_natural'", "'feumb_letra'", "'feumb_real'", 
			"'se'", "'senao'", "'enquanto'", "'fazer'", "'durante'", "'imprime'", 
			"'entrada('", "'+'", "'-'", null, "'\"'", "'@'", null, null, null, "';'", 
			"'{'", "'}'", "'('", "')'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "ID", "ASDUPLA", "OP_SOMAC", "OP_ARITMETICO2", "NUM", 
			"OPREL", "PV", "AC", "FC", "AP", "FP", "Op_atrib", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "fupl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Variavel x = new Variavel();
		ControleVariavel cv = new ControleVariavel();
		String saida = "";
		int escopo;
		int tipo;
		int tmp = 0;
		String nid, idO;
		Scanner entrada = new Scanner(System.in);

	public fuplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InicioContext extends ParserRuleContext {
		public List<DeclvarContext> declvar() {
			return getRuleContexts(DeclvarContext.class);
		}
		public DeclvarContext declvar(int i) {
			return getRuleContext(DeclvarContext.class,i);
		}
		public CmdContext cmd() {
			return getRuleContext(CmdContext.class,0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).exitInicio(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			enterOuterAlt(_localctx, 1);
			{

					 escopo = 0;
					 saida += "public class Saida{\n\t";
					
			setState(29);
			declvar();
			setState(30);
			match(T__0);

									  escopo = 1;
									  saida += "\n\tpublic static void main(String args[]){\n\n\t\tScanner entrada = new Scanner(System.in);\n\t\t";
									 
			setState(32);
			declvar();
			setState(33);
			cmd();
			setState(34);
			match(T__1);

										   saida += "\n\t}\n}"; 
										   System.out.println(saida);
										  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclvarContext extends ParserRuleContext {
		public Token ID;
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(fuplParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(fuplParser.ID, i);
		}
		public List<TerminalNode> PV() { return getTokens(fuplParser.PV); }
		public TerminalNode PV(int i) {
			return getToken(fuplParser.PV, i);
		}
		public DeclvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).enterDeclvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).exitDeclvar(this);
		}
	}

	public final DeclvarContext declvar() throws RecognitionException {
		DeclvarContext _localctx = new DeclvarContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declvar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4))) != 0)) {
				{
				{
				setState(37);
				tipo();
				setState(38);
				((DeclvarContext)_localctx).ID = match(ID);

								   x = new Variavel((((DeclvarContext)_localctx).ID!=null?((DeclvarContext)_localctx).ID.getText():null), tipo, escopo);
								   boolean ret = cv.adiciona(x);
								   if(!ret){
										    System.out.println("\nFeUmb adverte: variável " + (((DeclvarContext)_localctx).ID!=null?((DeclvarContext)_localctx).ID.getText():null) + " já foi declarada!");
											System.exit(0);
										   }
								  
				setState(40);
				match(PV);
				 saida += (((DeclvarContext)_localctx).ID!=null?((DeclvarContext)_localctx).ID.getText():null) + ";\n\t\t";
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tipo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				{
				setState(48);
				match(T__2);
				tipo = 0; saida += "int ";
				}
				break;
			case T__3:
				{
				setState(50);
				match(T__3);
				tipo = 1; saida += "char ";
				}
				break;
			case T__4:
				{
				setState(52);
				match(T__4);
				tipo = 2; saida += "double ";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public List<CondContext> cond() {
			return getRuleContexts(CondContext.class);
		}
		public CondContext cond(int i) {
			return getRuleContext(CondContext.class,i);
		}
		public List<AtribContext> atrib() {
			return getRuleContexts(AtribContext.class);
		}
		public AtribContext atrib(int i) {
			return getRuleContext(AtribContext.class,i);
		}
		public List<EnquantoContext> enquanto() {
			return getRuleContexts(EnquantoContext.class);
		}
		public EnquantoContext enquanto(int i) {
			return getRuleContext(EnquantoContext.class,i);
		}
		public List<FazerContext> fazer() {
			return getRuleContexts(FazerContext.class);
		}
		public FazerContext fazer(int i) {
			return getRuleContext(FazerContext.class,i);
		}
		public List<SaidaContext> saida() {
			return getRuleContexts(SaidaContext.class);
		}
		public SaidaContext saida(int i) {
			return getRuleContext(SaidaContext.class,i);
		}
		public List<TextoContext> texto() {
			return getRuleContexts(TextoContext.class);
		}
		public TextoContext texto(int i) {
			return getRuleContext(TextoContext.class,i);
		}
		public List<EntradaContext> entrada() {
			return getRuleContexts(EntradaContext.class);
		}
		public EntradaContext entrada(int i) {
			return getRuleContext(EntradaContext.class,i);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).exitCmd(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmd);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << T__10) | (1L << T__11) | (1L << ID) | (1L << NUM))) != 0)) {
				{
				setState(63);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(56);
					cond();
					}
					break;
				case 2:
					{
					setState(57);
					atrib();
					}
					break;
				case 3:
					{
					setState(58);
					enquanto();
					}
					break;
				case 4:
					{
					setState(59);
					fazer();
					}
					break;
				case 5:
					{
					setState(60);
					saida();
					}
					break;
				case 6:
					{
					setState(61);
					texto();
					}
					break;
				case 7:
					{
					setState(62);
					entrada();
					}
					break;
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public CompContext comp;
		public TerminalNode AP() { return getToken(fuplParser.AP, 0); }
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public TerminalNode FP() { return getToken(fuplParser.FP, 0); }
		public List<TerminalNode> AC() { return getTokens(fuplParser.AC); }
		public TerminalNode AC(int i) {
			return getToken(fuplParser.AC, i);
		}
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public List<TerminalNode> FC() { return getTokens(fuplParser.FC); }
		public TerminalNode FC(int i) {
			return getToken(fuplParser.FC, i);
		}
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).enterCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).exitCond(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cond);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__5);
			saida += "\n\t\tif ";
			setState(70);
			match(AP);
			saida += "(";
			setState(72);
			((CondContext)_localctx).comp = comp();
			saida += (((CondContext)_localctx).comp!=null?_input.getText(((CondContext)_localctx).comp.start,((CondContext)_localctx).comp.stop):null);
			setState(74);
			match(FP);
			saida += ")"; 
			setState(76);
			match(AC);
			saida += "{\n\t\t\t"; 
			setState(78);
			cmd();
			setState(79);
			match(FC);
			saida += "\n\t\t}";
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(81);
				match(T__6);
				saida += " else "; 
				setState(83);
				match(AC);
				saida += "{\n\t\t\t";
				setState(85);
				cmd();
				setState(86);
				match(FC);
				saida += "\n\t\t}"; 
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnquantoContext extends ParserRuleContext {
		public CompContext comp;
		public TerminalNode AP() { return getToken(fuplParser.AP, 0); }
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public TerminalNode FP() { return getToken(fuplParser.FP, 0); }
		public TerminalNode AC() { return getToken(fuplParser.AC, 0); }
		public CmdContext cmd() {
			return getRuleContext(CmdContext.class,0);
		}
		public TerminalNode FC() { return getToken(fuplParser.FC, 0); }
		public EnquantoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enquanto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).enterEnquanto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).exitEnquanto(this);
		}
	}

	public final EnquantoContext enquanto() throws RecognitionException {
		EnquantoContext _localctx = new EnquantoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_enquanto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__7);
			saida += "\n\t\twhile ";
			setState(93);
			match(AP);
			saida += "(";
			setState(95);
			((EnquantoContext)_localctx).comp = comp();
			saida += (((EnquantoContext)_localctx).comp!=null?_input.getText(((EnquantoContext)_localctx).comp.start,((EnquantoContext)_localctx).comp.stop):null);
			setState(97);
			match(FP);
			saida += ")";
			setState(99);
			match(AC);
			saida += " {\n\t\t\t";
			setState(101);
			cmd();
			setState(102);
			match(FC);
			saida+="\n\t\t}";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FazerContext extends ParserRuleContext {
		public CompContext comp;
		public TerminalNode AC() { return getToken(fuplParser.AC, 0); }
		public CmdContext cmd() {
			return getRuleContext(CmdContext.class,0);
		}
		public TerminalNode FC() { return getToken(fuplParser.FC, 0); }
		public TerminalNode AP() { return getToken(fuplParser.AP, 0); }
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public TerminalNode FP() { return getToken(fuplParser.FP, 0); }
		public TerminalNode PV() { return getToken(fuplParser.PV, 0); }
		public FazerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fazer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).enterFazer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).exitFazer(this);
		}
	}

	public final FazerContext fazer() throws RecognitionException {
		FazerContext _localctx = new FazerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fazer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__8);
			saida += "\n\t\tdo ";
			setState(107);
			match(AC);
			saida += "{\n\t\t\t";
			setState(109);
			cmd();
			setState(110);
			match(FC);
			saida += "\n\t\t}";
			setState(112);
			match(T__9);
			saida += " while ";
			setState(114);
			match(AP);
			saida += "(";
			setState(116);
			((FazerContext)_localctx).comp = comp();
			saida += (((FazerContext)_localctx).comp!=null?_input.getText(((FazerContext)_localctx).comp.start,((FazerContext)_localctx).comp.stop):null);
			setState(118);
			match(FP);
			saida += ")";
			setState(120);
			match(PV);
			saida += ";";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public List<TextoContext> texto() {
			return getRuleContexts(TextoContext.class);
		}
		public TextoContext texto(int i) {
			return getRuleContext(TextoContext.class,i);
		}
		public TerminalNode OPREL() { return getToken(fuplParser.OPREL, 0); }
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).enterComp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).exitComp(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			texto();
			setState(124);
			match(OPREL);
			setState(125);
			texto();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SaidaContext extends ParserRuleContext {
		public TextoContext texto;
		public Token ID;
		public TerminalNode AP() { return getToken(fuplParser.AP, 0); }
		public TerminalNode PV() { return getToken(fuplParser.PV, 0); }
		public List<TerminalNode> ASDUPLA() { return getTokens(fuplParser.ASDUPLA); }
		public TerminalNode ASDUPLA(int i) {
			return getToken(fuplParser.ASDUPLA, i);
		}
		public List<TextoContext> texto() {
			return getRuleContexts(TextoContext.class);
		}
		public TextoContext texto(int i) {
			return getRuleContext(TextoContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(fuplParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(fuplParser.ID, i);
		}
		public TerminalNode FP() { return getToken(fuplParser.FP, 0); }
		public List<TerminalNode> OP_SOMAC() { return getTokens(fuplParser.OP_SOMAC); }
		public TerminalNode OP_SOMAC(int i) {
			return getToken(fuplParser.OP_SOMAC, i);
		}
		public SaidaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_saida; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).enterSaida(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).exitSaida(this);
		}
	}

	public final SaidaContext saida() throws RecognitionException {
		SaidaContext _localctx = new SaidaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_saida);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__10);
			saida += "\nSystem.out.println";
			setState(129);
			match(AP);
			saida += "(";
			setState(171);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASDUPLA:
				{
				setState(131);
				match(ASDUPLA);
				setState(132);
				((SaidaContext)_localctx).texto = texto();
				saida += (((SaidaContext)_localctx).texto!=null?_input.getText(((SaidaContext)_localctx).texto.start,((SaidaContext)_localctx).texto.stop):null);
				setState(134);
				match(ASDUPLA);
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==OP_SOMAC) {
					{
					{
					setState(135);
					match(OP_SOMAC);
					saida += "+";
					setState(144);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ID:
						{
						setState(137);
						((SaidaContext)_localctx).ID = match(ID);
						saida += (((SaidaContext)_localctx).ID!=null?((SaidaContext)_localctx).ID.getText():null);
						}
						break;
					case ASDUPLA:
						{
						setState(139);
						match(ASDUPLA);
						setState(140);
						((SaidaContext)_localctx).texto = texto();
						saida += (((SaidaContext)_localctx).texto!=null?_input.getText(((SaidaContext)_localctx).texto.start,((SaidaContext)_localctx).texto.stop):null);
						setState(142);
						match(ASDUPLA);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case ID:
				{
				setState(151);
				((SaidaContext)_localctx).ID = match(ID);
				saida += (((SaidaContext)_localctx).ID!=null?((SaidaContext)_localctx).ID.getText():null);
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==OP_SOMAC) {
					{
					{
					setState(153);
					match(OP_SOMAC);
					saida += "+";
					setState(162);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ID:
						{
						setState(155);
						((SaidaContext)_localctx).ID = match(ID);
						saida += (((SaidaContext)_localctx).ID!=null?((SaidaContext)_localctx).ID.getText():null);
						}
						break;
					case ASDUPLA:
						{
						setState(157);
						match(ASDUPLA);
						setState(158);
						((SaidaContext)_localctx).texto = texto();
						saida += (((SaidaContext)_localctx).texto!=null?_input.getText(((SaidaContext)_localctx).texto.start,((SaidaContext)_localctx).texto.stop):null);
						setState(160);
						match(ASDUPLA);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(169);
				match(FP);
				saida += ");";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(173);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntradaContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(fuplParser.ID, 0); }
		public TerminalNode FP() { return getToken(fuplParser.FP, 0); }
		public TerminalNode PV() { return getToken(fuplParser.PV, 0); }
		public EntradaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entrada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).enterEntrada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fuplListener ) ((fuplListener)listener).exitEntrada(this);
		}
	}

	public final EntradaContext entrada() throws RecognitionException {
		EntradaContext _localctx = new EntradaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_entrada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(T__11);
			setState(176);
			((EntradaContext)_localctx).ID = match(ID);
			setState(177);
			match(FP);
			saida += "\n\t\t" + (((EntradaContext)_localctx).ID!=null?((EntradaContext)_localctx).ID.getText():null) + " = entrada.next";
